--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="UTF-8">
-	<title>Hello, R2-ie8-Template!</title>
+	<title>React IE8</title>
 	<script src="lib/es5-shim.min.js"></script>
 	<script src="lib/es5-sham.min.js"></script>
 	<script src="lib/jquery.min.js"></script>
@@ -11,6 +11,6 @@
 </head>
 <body>
 	<div id="app"></div>
-	<script async src="dist/bundle.js"></script>
+	<script async src="dest/bundle.js"></script>
 </body>
 </html>	
