--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="UTF-8">
 	<title>React IE8</title>
+	<link rel="stylesheet" href="imgcss/lib_v2.css"/>
+	<link rel="stylesheet" href="imgcss/global_v2.css"/>
+
+
+	<link rel="stylesheet" href="imgcss/patent_view.css"/>
+	<link rel="stylesheet" href="imgcss/pnview.css"/>
+
 	<script src="lib/es5-shim.min.js"></script>
 	<script src="lib/es5-sham.min.js"></script>
 	<script src="lib/jquery.min.js"></script>
