--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<script src="lib/es5-shim.min.js"></script>
 	<script src="lib/es5-sham.min.js"></script>
 	<script src="lib/jquery.min.js"></script>
+	<script>
+		var lang = 'cn';
+	</script>
 </head>
 <body>
 	<div id="app"></div>
