--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<link rel="stylesheet" href="imgcss/patent_view.css"/>
 	<link rel="stylesheet" href="imgcss/pnview.css"/>
+	<link rel="stylesheet" href="imgcss/component.css"/>
 
 	<script src="lib/es5-shim.min.js"></script>
 	<script src="lib/es5-sham.min.js"></script>
