IE spec comment

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta charset="UTF-8">
 	<title>React IE8</title>
-	<script src="lib/es5-shim.min.js"></script>
-	<script src="lib/es5-sham.min.js"></script>
+	<!--[if lt IE 9]>
+	<script src="/static/pubview/lib/es5-shim.min.js"></script><script src="/static/pubview/lib/es5-sham.min.js"></script>
+	<![endif]-->
+
 	<script src="lib/jquery.min.js"></script>
 </head>
 <body>
