--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<title>React IE8</title>
 	<!--[if lt IE 9]>
-	<script src="/static/pubview/lib/es5-shim.min.js"></script><script src="/static/pubview/lib/es5-sham.min.js"></script>
+	<script src="lib/es5-shim.min.js"></script><script src="lib/es5-sham.min.js"></script>
 	<![endif]-->
 
 	<script src="lib/jquery.min.js"></script>
